done only missing polish

--- a/task_1/html/main.tex
+++ b/task_1/html/main.tex
@@ -42,10 +42,10 @@ Differential equation describing the tank water level:
 $$ \frac{d}{dt}H = \frac{bV-a\sqrt{H}}{A} $$
 \end{par} \vspace{1em}
 \begin{par}
-This ode is non-linear in \ensuremath{\backslash}sqrt\{H\}. However, we can approximate this by a first order taylor expansion/linearization:
+This ode is non-linear in $\sqrt{H}$. However, we can approximate this by a first order taylor expansion/linearization in a neighbourhood $H_0 + \hat{H}$ around the stationary point $H_0$:
 \end{par} \vspace{1em}
 \begin{par}
-$$ \sqrt{H_0 + \hat{H}} = \sqrt{H_0} + \frac{1}{2\sqrt{H_0}}\cdot (H-H_o) $$
+$$ \sqrt{H_0 + \hat{H}} \approx \sqrt{H_0} + \frac{1}{2\sqrt{H_0}}\cdot (H-H_o) $$
 \end{par} \vspace{1em}
 \begin{par}
 With this linearization we arrive at the linear ODE:
